updated media queries with styles appropriate for samsung phone, initial push

--- a/src/header-footer-media-queries.css
+++ b/src/header-footer-media-queries.css
@@ -48,10 +48,10 @@
   @media screen and (max-width: 480px) {
  
 
-    .header {
+    /* .header {
       float: none;
       width: 100%;
-    }
+    } */
   
     .footer {
       float: none;
