--- a/src/media-queries.css
+++ b/src/media-queries.css
@@ -298,6 +298,78 @@
 /* Portrait and Landscape */
 @media screen and (device-width: 360px) and (device-height: 740px) and (-webkit-device-pixel-ratio: 4) {
 
+  body {
+    font-weight: 500;
+  }
+  
+  header ul {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0% 8% 0% 8%;
+    font-size: 0.05em;
+  }
+  #about {
+    height: 10vh;
+    font-size: 25px;
+    margin: 0 0 10px 0;
+   }
+
+  #aboutPhoto img {
+    display: flex;
+    flex-direction: column;
+    padding: 0% 0.5% 0% 0.5%;
+    margin: 10px 0 10px 45px;
+    height: 20vh;
+    width: 18vh;
+  }
+
+  p {
+    font-size: 0.5em;
+    margin: 10px 400px 0 0;
+    padding: 5px 0 5px 0;
+    text-align: justify;
+    letter-spacing: 0.25px; 
+  }
+
+  #aboutPhoto {
+    display: flex;
+    flex-direction: column;
+    padding: 0% 2% 0% 5%;
+    height: 60vh;
+  }
+
+  .aboutSection{
+    padding: 0;
+    height: 100vh;
+    width: 100vh;
+  }
+  .SplitPane-Left-PDF {
+    display: flex;
+    flex-direction: column;
+    float: left;
+    width: 50%;
+    font-size: 0.5em;
+    letter-spacing: 0.25px; 
+    text-align: left;
+    padding: 20px 320px 1px 0;
+    font-style: italic;
+    color: rgb(63, 63, 140);
+    height: 5%;
+  }
+
+  .SplitPane-Right-Photo img {
+    display: flex;
+    flex-direction: column;
+    float: right;
+    width: 50%;
+    text-align: center;
+    padding: 1% 0% 1% 0%;
+    font-style: italic;
+    color: rgb(63, 63, 140);
+  }
+
 }
 
 /* Portrait */
