--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,10 @@ main {
   max-width: 100%;
 }
 
-html,
+/* html,
 body {
-  min-height: 100%;
-}
+  min-height: 100vh;
+} */
 
 body {
   margin: 0;
@@ -160,7 +160,8 @@ footer section {
   justify-content: space-around;
   height: 100%;
   width: 100%;
-  padding: 40px 25px;
+  padding: 2rem 1rem;
+  /* padding: 40px 25px; */
 }
 
 #about,
@@ -174,7 +175,7 @@ footer section {
 }
 .aboutSection{
   padding: 0;
-  height: 100%;
+  height: 100vh;
 }
 
 #aboutPhoto {
